# leetcode-exercises

./: .gitignore  README.md  a.out
src/: pyproject.toml
src/100_same_tree/: Solution.cpp
src/101_symetric_tree/: solution.py
src/1043_partition_array_for_max_sum/: solution.py
src/104_maximum_depth_of_binarytree/: solution.py
src/108_conveted/: solution.py
src/110_balanced_binary_tree/: solution.py
src/111_min_bst_depth/: solution.py
src/112_pathsum/: Solution.java
src/114_flatten_bt_to_ll/: solution.py
src/118_pascal_triangule/: Solution.java
src/119_pascal_triangle_II/: solution.py
src/11_container/: container.c
src/121_BTBS/: Solution.java
src/125_valid_palindrome/: solution.py
src/129_SRLN/: solution.py
src/12_integer_to_roman/: solution.py
src/1314_matrix_block_sum/: solution.py
src/136_single_number/: Solution.java
src/13_roman_to_integer/: Solution.java
src/144_preorder_travers/: Solution.cs
src/14_longest_common_prefix/: Solution.java
src/151_RWS/: solution.py
src/152_MPS/: solution.py
src/153_FMRS/: solution.py
src/154_FMRS_II/: solution.py
src/155_min_stack/: solution.cpp
src/15_3sum/: Solution.java
src/160_ITLL/: Solution.java
src/169_majority_element/: Solution.cpp
src/16_3sum_closest/: solution.py
src/17_letter_combinations/: solution.py
src/190_reverse_bits/: Solution.cs
src/1941_check_occurrences/: solution.py
src/19_remove_node/: solution.py
src/1_twosum/: Solution.java
src/207_course_schedule/: solution.py
src/20_valid_parentesis/: Solution.java
src/230_ksebst/: solution.py
(+47 files in other folders)
