[tool.poetry]
name = "leetcode-exercises"
version = "0.1.0"
description = "Leetcode problems solutions"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ipdb = "^0.13.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
